crucible-macros/tests/ui/fail-invalid-generics.stderr
error[E0308]: mismatched types
 --> tests/ui/fail-invalid-generics.rs:4:1
  |
4 | #[fixture]
  | ^^^^^^^^^^
  | |
  | expected `GenericFixture<T>`, found `GenericFixture<u32>`
  | expected due to the type of this binding
5 | pub struct GenericFixture<T> {
  |                           - expected this type parameter
  |
  = note: expected struct `GenericFixture<T>`
             found struct `GenericFixture<u32>`
  = note: this error originates in the attribute macro `fixture` (in Nightly builds, run with -Z macro-backtrace for more info)
